src/classes/hera/parser/HeraParser.java
// Generated from Hera.g4 by ANTLR 4.4
package hera.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HeraParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AFFECTSPOS=7, ADD=31, QUOTE=34, IMPL=5, MAY=23, AFFECTSNEG=8, SCAUSES=14, 
		I=9, FORALL=19, K=24, CLOSE=37, DR=27, INT=33, COMMENT=38, ATOM=1, MINUS=29, 
		U=26, CONSEQUENCE=25, WS=41, INTERVENTION=17, COMMA=35, SUB=30, WORD=32, 
		OR=3, EXISTS=18, NEWLINE=40, PREVENTS=16, GT=20, MUST=22, OPEN=36, NOT=2, 
		GOAL=10, GEQ=21, MEANS=11, LINE_COMMENT=39, AND=4, PCAUSES=13, CAUSES=12, 
		EXPLAINS=15, AFFECTS=6, DB=28;
	public static final String[] tokenNames = {
		"<INVALID>", "'Atom'", "'Not'", "'Or'", "'And'", "'Impl'", "'Affects'", 
		"'AffectsPos'", "'AffectsNeg'", "'I'", "'Goal'", "'Means'", "'Causes'", 
		"'PCauses'", "'SCauses'", "'Explains'", "'Prevents'", "'Intervention'", 
		"'Exists'", "'Forall'", "'Gt'", "'Geq'", "'Must'", "'May'", "'K'", "'Consequence'", 
		"'U'", "'DR'", "'DB'", "'Minus'", "'Sub'", "'Add'", "WORD", "INT", "'''", 
		"','", "'('", "')'", "COMMENT", "LINE_COMMENT", "NEWLINE", "WS"
	};
	public static final int
		RULE_formula = 0, RULE_atomfmla = 1, RULE_notfmla = 2, RULE_andfmla = 3, 
		RULE_orfmla = 4, RULE_implfmla = 5, RULE_affectsfmla = 6, RULE_affectsnegfmla = 7, 
		RULE_affectsposfmla = 8, RULE_ifmla = 9, RULE_goalfmla = 10, RULE_meansfmla = 11, 
		RULE_causesfmla = 12, RULE_pcausesfmla = 13, RULE_scausesfmla = 14, RULE_explainsfmla = 15, 
		RULE_preventsfmla = 16, RULE_interventionfmla = 17, RULE_existsfmla = 18, 
		RULE_forallfmla = 19, RULE_gtfmla = 20, RULE_geqfmla = 21, RULE_mustfmla = 22, 
		RULE_mayfmla = 23, RULE_kfmla = 24, RULE_consequencefmla = 25, RULE_stringfmla = 26, 
		RULE_term = 27, RULE_uterm = 28, RULE_drterm = 29, RULE_dbterm = 30, RULE_minusterm = 31, 
		RULE_subterm = 32, RULE_addterm = 33, RULE_intterm = 34;
	public static final String[] ruleNames = {
		"formula", "atomfmla", "notfmla", "andfmla", "orfmla", "implfmla", "affectsfmla", 
		"affectsnegfmla", "affectsposfmla", "ifmla", "goalfmla", "meansfmla", 
		"causesfmla", "pcausesfmla", "scausesfmla", "explainsfmla", "preventsfmla", 
		"interventionfmla", "existsfmla", "forallfmla", "gtfmla", "geqfmla", "mustfmla", 
		"mayfmla", "kfmla", "consequencefmla", "stringfmla", "term", "uterm", 
		"drterm", "dbterm", "minusterm", "subterm", "addterm", "intterm"
	};

	@Override
	public String getGrammarFileName() { return "Hera.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HeraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormulaContext extends ParserRuleContext {
		public StringfmlaContext stringfmla() {
			return getRuleContext(StringfmlaContext.class,0);
		}
		public MeansfmlaContext meansfmla() {
			return getRuleContext(MeansfmlaContext.class,0);
		}
		public MustfmlaContext mustfmla() {
			return getRuleContext(MustfmlaContext.class,0);
		}
		public GeqfmlaContext geqfmla() {
			return getRuleContext(GeqfmlaContext.class,0);
		}
		public ExistsfmlaContext existsfmla() {
			return getRuleContext(ExistsfmlaContext.class,0);
		}
		public IfmlaContext ifmla() {
			return getRuleContext(IfmlaContext.class,0);
		}
		public ExplainsfmlaContext explainsfmla() {
			return getRuleContext(ExplainsfmlaContext.class,0);
		}
		public ScausesfmlaContext scausesfmla() {
			return getRuleContext(ScausesfmlaContext.class,0);
		}
		public KfmlaContext kfmla() {
			return getRuleContext(KfmlaContext.class,0);
		}
		public AffectsnegfmlaContext affectsnegfmla() {
			return getRuleContext(AffectsnegfmlaContext.class,0);
		}
		public MayfmlaContext mayfmla() {
			return getRuleContext(MayfmlaContext.class,0);
		}
		public OrfmlaContext orfmla() {
			return getRuleContext(OrfmlaContext.class,0);
		}
		public ForallfmlaContext forallfmla() {
			return getRuleContext(ForallfmlaContext.class,0);
		}
		public AndfmlaContext andfmla() {
			return getRuleContext(AndfmlaContext.class,0);
		}
		public PcausesfmlaContext pcausesfmla() {
			return getRuleContext(PcausesfmlaContext.class,0);
		}
		public ConsequencefmlaContext consequencefmla() {
			return getRuleContext(ConsequencefmlaContext.class,0);
		}
		public AffectsposfmlaContext affectsposfmla() {
			return getRuleContext(AffectsposfmlaContext.class,0);
		}
		public AffectsfmlaContext affectsfmla() {
			return getRuleContext(AffectsfmlaContext.class,0);
		}
		public AtomfmlaContext atomfmla() {
			return getRuleContext(AtomfmlaContext.class,0);
		}
		public NotfmlaContext notfmla() {
			return getRuleContext(NotfmlaContext.class,0);
		}
		public GoalfmlaContext goalfmla() {
			return getRuleContext(GoalfmlaContext.class,0);
		}
		public ImplfmlaContext implfmla() {
			return getRuleContext(ImplfmlaContext.class,0);
		}
		public CausesfmlaContext causesfmla() {
			return getRuleContext(CausesfmlaContext.class,0);
		}
		public InterventionfmlaContext interventionfmla() {
			return getRuleContext(InterventionfmlaContext.class,0);
		}
		public PreventsfmlaContext preventsfmla() {
			return getRuleContext(PreventsfmlaContext.class,0);
		}
		public GtfmlaContext gtfmla() {
			return getRuleContext(GtfmlaContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formula);
		try {
			setState(97);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70); atomfmla();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); notfmla();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72); andfmla();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73); orfmla();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(74); notfmla();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75); implfmla();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(76); affectsfmla();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(77); affectsposfmla();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(78); affectsnegfmla();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(79); ifmla();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(80); goalfmla();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(81); meansfmla();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(82); causesfmla();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(83); pcausesfmla();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(84); scausesfmla();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(85); explainsfmla();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(86); preventsfmla();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(87); interventionfmla();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(88); existsfmla();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(89); forallfmla();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(90); gtfmla();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(91); geqfmla();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(92); mustfmla();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(93); mayfmla();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(94); kfmla();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(95); consequencefmla();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(96); stringfmla();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public TerminalNode ATOM() { return getToken(HeraParser.ATOM, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public AtomfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitAtomfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomfmlaContext atomfmla() throws RecognitionException {
		AtomfmlaContext _localctx = new AtomfmlaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_atomfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); match(ATOM);
			setState(100); match(OPEN);
			setState(101); formula();
			setState(102); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotfmlaContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(HeraParser.NOT, 0); }
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public NotfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitNotfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotfmlaContext notfmla() throws RecognitionException {
		NotfmlaContext _localctx = new NotfmlaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_notfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(NOT);
			setState(105); match(OPEN);
			setState(106); formula();
			setState(107); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public TerminalNode AND() { return getToken(HeraParser.AND, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public AndfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitAndfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndfmlaContext andfmla() throws RecognitionException {
		AndfmlaContext _localctx = new AndfmlaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_andfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); match(AND);
			setState(110); match(OPEN);
			setState(111); formula();
			setState(112); match(COMMA);
			setState(113); formula();
			setState(114); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public TerminalNode OR() { return getToken(HeraParser.OR, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public OrfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitOrfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrfmlaContext orfmla() throws RecognitionException {
		OrfmlaContext _localctx = new OrfmlaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_orfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(OR);
			setState(117); match(OPEN);
			setState(118); formula();
			setState(119); match(COMMA);
			setState(120); formula();
			setState(121); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplfmlaContext extends ParserRuleContext {
		public TerminalNode IMPL() { return getToken(HeraParser.IMPL, 0); }
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public ImplfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitImplfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplfmlaContext implfmla() throws RecognitionException {
		ImplfmlaContext _localctx = new ImplfmlaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_implfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(IMPL);
			setState(124); match(OPEN);
			setState(125); formula();
			setState(126); match(COMMA);
			setState(127); formula();
			setState(128); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectsfmlaContext extends ParserRuleContext {
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode AFFECTS() { return getToken(HeraParser.AFFECTS, 0); }
		public AffectsfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affectsfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitAffectsfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectsfmlaContext affectsfmla() throws RecognitionException {
		AffectsfmlaContext _localctx = new AffectsfmlaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_affectsfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); match(AFFECTS);
			setState(131); formula();
			setState(132); match(COMMA);
			setState(133); formula();
			setState(134); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectsnegfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode AFFECTSNEG() { return getToken(HeraParser.AFFECTSNEG, 0); }
		public AffectsnegfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affectsnegfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitAffectsnegfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectsnegfmlaContext affectsnegfmla() throws RecognitionException {
		AffectsnegfmlaContext _localctx = new AffectsnegfmlaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_affectsnegfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(AFFECTSNEG);
			setState(137); match(OPEN);
			setState(138); formula();
			setState(139); match(COMMA);
			setState(140); formula();
			setState(141); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectsposfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode AFFECTSPOS() { return getToken(HeraParser.AFFECTSPOS, 0); }
		public AffectsposfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affectsposfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitAffectsposfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectsposfmlaContext affectsposfmla() throws RecognitionException {
		AffectsposfmlaContext _localctx = new AffectsposfmlaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_affectsposfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); match(AFFECTSPOS);
			setState(144); match(OPEN);
			setState(145); formula();
			setState(146); match(COMMA);
			setState(147); formula();
			setState(148); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public TerminalNode I() { return getToken(HeraParser.I, 0); }
		public IfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitIfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfmlaContext ifmla() throws RecognitionException {
		IfmlaContext _localctx = new IfmlaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); match(I);
			setState(151); match(OPEN);
			setState(152); formula();
			setState(153); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public TerminalNode GOAL() { return getToken(HeraParser.GOAL, 0); }
		public GoalfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goalfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitGoalfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalfmlaContext goalfmla() throws RecognitionException {
		GoalfmlaContext _localctx = new GoalfmlaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_goalfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155); match(GOAL);
			setState(156); match(OPEN);
			setState(157); formula();
			setState(158); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MeansfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public TerminalNode MEANS() { return getToken(HeraParser.MEANS, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public MeansfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_meansfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitMeansfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MeansfmlaContext meansfmla() throws RecognitionException {
		MeansfmlaContext _localctx = new MeansfmlaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_meansfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); match(MEANS);
			setState(161); match(OPEN);
			setState(162); formula();
			setState(163); match(COMMA);
			setState(164); formula();
			setState(165); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CausesfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public TerminalNode CAUSES() { return getToken(HeraParser.CAUSES, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public CausesfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_causesfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitCausesfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CausesfmlaContext causesfmla() throws RecognitionException {
		CausesfmlaContext _localctx = new CausesfmlaContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_causesfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167); match(CAUSES);
			setState(168); match(OPEN);
			setState(169); formula();
			setState(170); match(COMMA);
			setState(171); formula();
			setState(172); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PcausesfmlaContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(HeraParser.OPEN, 0); }
		public TerminalNode PCAUSES() { return getToken(HeraParser.PCAUSES, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public TerminalNode COMMA() { return getToken(HeraParser.COMMA, 0); }
		public TerminalNode CLOSE() { return getToken(HeraParser.CLOSE, 0); }
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public PcausesfmlaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pcausesfmla; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeraVisitor ) return ((HeraVisitor<? extends T>)visitor).visitPcausesfmla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PcausesfmlaContext pcausesfmla() throws RecognitionException {
		PcausesfmlaContext _localctx = new PcausesfmlaContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_pcausesfmla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174); match(PCAUSES);
			setState(175); match(OPEN);
			setState(176); formula();
			setState(177); match(COMMA);
			setState(178); formula();
			setState(179); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
